--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to HuemulSolutions homePage!
+title: Huemul Solutions
 description: Agile Data Engineering for BigData Projects 
