--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Huemul Solutions - BigData Governance
-description: BigData Governance: Acelera tu Desarrollo de Proyectos en BigData.
+description: BigData Governance: Acelera tu Desarrollo de Proyectos en BigData
 show_downloads: true
 google_analytics: true
 theme: jekyll-theme-cayman
